# manage_employee_schedule

./: .gitignore  CMakeLists.txt  manage_employee_schedule.cpp  manage_employee_schedule.py
input/: preference_schedule.yaml
output/: schedule.yaml  schedule_cpp.yaml
test/: test_manage_schedule.py
